Complete homework from 05-24
Solutions for all 15 programming tasks.

--- a/05-24-17/index.html
+++ b/05-24-17/index.html
@@ -92,8 +92,8 @@
 		<!--  Write a function called play() to play rock, paper, scissors and output the winner (player 1 or player 2) -->
 		<div class="exercise" id="c5">
 			<h3>11) Write a function called play() to play rock, paper, scissors and output the winner (player 1 or player 2)</h3>
-			<input id="rps_player1" type="text">
-			<input id="rps_player2" type="text">
+			<input id="rps_player1" type="text" placeholder="Player 1">
+			<input id="rps_player2" type="text" placeholder="Player 2">
 			<div id="rps_winner_display"></div>
 			<input type="submit" id="rps_submit"/>
 		</div>
