--- a/todo-06-14-17/index.html
+++ b/todo-06-14-17/index.html
@@ -12,7 +12,7 @@
 	<script src="scripts.js"></script>
 
 	<script id="todo-template" type="text/x-handlebars-template">
-		<li>{{toDo}}</li>
+		<li>{{toDoItem}} {{completeLink}}</li>
 	</script>
 
 </head>
