Change template to allow HTML to render as HTML

--- a/todo-06-14-17/index.html
+++ b/todo-06-14-17/index.html
@@ -7,13 +7,14 @@
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
 	
 	<script src="scripts.js"></script>
 
 	<script id="todo-template" type="text/x-handlebars-template">
-		<li>{{toDo}}</li>
+		<li>{{{toDo}}}</li>
 	</script>
+
+	<link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
