--- a/movie-search/index.html
+++ b/movie-search/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Movie DB</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600" rel="stylesheet">
+    <link rel="stylesheet" href="jquery.typeahead.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
@@ -20,6 +21,7 @@
             </div>
         </article>
     </script>
+
     <script id="modal-template" type="text/x-handlebars-template">
         <a class="close">&#10005;</a>
         <div class="info">
@@ -40,31 +42,37 @@
         </div>
     </script>
 
+    <script id="typeahead-template" type="text/x-handlebars-template">
+        <div>{{typeahead}}</div>
+    </script>
+
+
 </head>
 
 <body>
 	<main class="container">
 		<div class="head">
-		    <h1>Movie App</h1>
+		    <h1>Screen Quest</h1>
+            <h2>A movie and TV search app.</h2>
 
 		    <form id="movie_form" class="movie-form">
-		    	<input type="text" id="movie_search" class="movie-input" placeholder="Search for a movie" />
+		    	<input type="search" id="movie_search" class="movie-input" placeholder="Search for a movie" />
 		    	<input type="submit" id="movie_submit" class="movie-btn" value="Find!" />    	
 		    </form>
 		</div>
-		<div class="panel-wrap">
-			
-		</div>
 
-		<section class="movie-output">
-			
-		</section>
+        <div class="ahead-wrap"></div>
+
+		<div class="panel-wrap"></div>
+
+		<section class="movie-output"></section>
 
 	</main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="handlebars-v4.0.5.js" type="text/javascript" charset="utf-8" async defer></script>
+    <script src="jquery.typeahead.min.js" type="text/javascript" charset="utf-8" async defer></script>
     <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 
