--- a/movie-search/index.html
+++ b/movie-search/index.html
@@ -3,16 +3,15 @@
 
 <head>
     <title>Movie DB</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600" rel="stylesheet">
-    <link rel="stylesheet" href="jquery.typeahead.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
     <script id="movie-template" type="text/x-handlebars-template">
         <article class="movie-item type-{{type}}">
             <figure>
-            	{{{poster}}}
+                {{{poster}}}
             </figure>
             <h3><a href="{{link}}" target="_blank">{{title}}</a></h3>
             <div class="info">
@@ -21,7 +20,6 @@
             </div>
         </article>
     </script>
-
     <script id="modal-template" type="text/x-handlebars-template">
         <a class="close">&#10005;</a>
         <div class="info">
@@ -34,45 +32,30 @@
         </div>
         <p class="plot-spot">{{plot}}</p>
         <div class="bar-wrap">
-	        <div class="bar-segment" style="width: {{barWidth}}">
-	        	<div class="bar-text">
+            <div class="bar-segment" style="width: {{barWidth}}">
+                <div class="bar-text">
                     {{rating}} IMDB rating
                 </div>
-	        </div>
+            </div>
         </div>
     </script>
-
-    <script id="typeahead-template" type="text/x-handlebars-template">
-        <div>{{typeahead}}</div>
-    </script>
-
-
 </head>
 
 <body>
-	<main class="container">
-		<div class="head">
-		    <h1>Screen Quest</h1>
+    <main class="container">
+        <div class="head">
+            <h1>Screen Quest</h1>
             <h2>A movie and TV search app.</h2>
-
-		    <form id="movie_form" class="movie-form">
-		    	<input type="search" id="movie_search" class="movie-input" placeholder="Search for a movie" />
-		    	<input type="submit" id="movie_submit" class="movie-btn" value="Find!" />    	
-		    </form>
-		</div>
-
-        <div class="ahead-wrap"></div>
-
-		<div class="panel-wrap"></div>
-
-		<section class="movie-output"></section>
-
-	</main>
-
+            <form id="movie_form" class="movie-form">
+                <input type="search" id="movie_search" class="movie-input" placeholder="Search for a movie" />
+            </form>
+        </div>
+        <div class="panel-wrap"></div>
+        <section class="movie-output"></section>
+    </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="handlebars-v4.0.5.js" type="text/javascript" charset="utf-8" async defer></script>
-    <script src="jquery.typeahead.min.js" type="text/javascript" charset="utf-8" async defer></script>
     <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 
