Added logic to find and order Stops

--- a/bus/index.html
+++ b/bus/index.html
@@ -28,21 +28,14 @@
 <body>
 
     <p>
-        <label for="direction">Route</label><br>
-        <select id="direction">
-            <option value="inbound">inbound</option>
-            <option value="outbound">outbound</option>
-            <option>both</option>
+        <label for="route">Route</label><br>
+    	<select id="route">
+            <option value="" disabled selected>Select Route</option>   
         </select>
     </p>
-
     <p>
-        <label for="route">Route</label><br>
-    	<select id="route"></select>
-    </p>
-    <p>
-        <label for="destination">Direction</label><br>
-        <select id="destination"></select>
+        <label for="direction">Direction</label><br>
+        <select id="direction"></select>
     </p>
     <p>
         <label for="stops">Stops</label><br>
